--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
            class="btn btn-dark btn-lg"
             type="button"
              >
-             Button
+              Sign In
             </button>
         </div>
       </div>
@@ -132,7 +132,7 @@
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate mollitia suscipit sed, debitis ipsa sunt.
                 </p>
-                <a href="#" class="btn btn-dark">Read More</a>
+                <a href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
